--- a/crew/Boatswain.html
+++ b/crew/Boatswain.html
@@ -41,7 +41,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Боцман</b></p>
             <p>
                Боцман безпосередньо підпорядковується старшому помічнику. Він є керівником робіт із суднового корпусу. У
