--- a/crew/Captain.html
+++ b/crew/Captain.html
@@ -40,7 +40,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Капітан</b></p>
             <p><b>Повноваження</b></p>
             <p>Капітан є найвищою посадовою та довіреною особою Компанії на судні. Він несе повну відповідальність за
