Update Second assistant captain.html

--- a/crew/Second assistant captain.html
+++ b/crew/Second assistant captain.html
@@ -41,7 +41,7 @@
             </nav>
             <div class="main-container">
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Другий помічник капітана</b></p>
             <p>Другий помічник капітана безпосередньо підпорядковується старшому помічнику капітана та у необхідних
                випадках заміщає його. Другий помічник капітана керує службою побуту та медико-санітарною службою. За
