Update Senior assistant captain.html

--- a/crew/Senior assistant captain.html
+++ b/crew/Senior assistant captain.html
@@ -40,7 +40,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Старший помічник капітана</b></p>
             <p>Старший помічник капітана безпосередньо підчиняється капітану і є його першим заступником, відповідає за
                комерційно-експлуатаційну діяльність судна, організацію служби та стан дисципліни на суді, підготовку
