--- a/crew/Third Mechanic.html
+++ b/crew/Third Mechanic.html
@@ -40,7 +40,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Третій механік</b></p>
             <p>
                Третий механик непосредственно подчиняется старшему механику. В заведование третьего механика входят:
