--- a/crew/chiefEngineer.html
+++ b/crew/chiefEngineer.html
@@ -40,7 +40,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Старший механік</b></p>
             <p>Старший механік є заступником капітана з технічної частини. Він здійснює керування електромеханічною
                службою. У веденні старшого механіка знаходяться судова енергетична установка та всі суднові механізми,
