--- a/crew/crew.html
+++ b/crew/crew.html
@@ -40,7 +40,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <b>Екіпаж суден</b>
             <p>Судновий екіпаж складається з капітана, інших осіб командного складу (суднових офіцерів) та команди –
                боцман, матроси, мотористи, кухар. До командного складу (судновим офіцерам) крім капітана відносяться
