--- a/crew/electromechanic.html
+++ b/crew/electromechanic.html
@@ -40,7 +40,7 @@
                </ul>
             </nav>
          </aside>
-         <section class="info crew">
+         <section class="crewShip">
             <p><b>Електрик (електромеханік)</b></p>
             Електрик (електромеханік) відповідає за правильну технічну експлуатацію та стан суднової електростанції,
             електричної частини всіх електроприводних механізмів та пристроїв, електричної частини засобів
