--- a/crew/secondMechanic.html
+++ b/crew/secondMechanic.html
@@ -39,7 +39,7 @@
          </nav>
       </aside>
       
-      <section class="info crew">
+      <section class="crewShip">
          <p><b>Другий механік</b></p>         
          <p>
             Другий механік безпосередньо підпорядковується старшому механіку. Він є першим заступником.
