--- a/crew/Third Mechanic.html
+++ b/crew/Third Mechanic.html
@@ -43,18 +43,18 @@
          <section class="crewShip">
             <p><b>Третій механік</b></p>
             <p>
-               Третий механик непосредственно подчиняется старшему механику. В заведование третьего механика входят:
+               Третій механік безпосередньо підпорядковується старшому механіку. До завідування третього механіка входять:
             <ul>
-               <li>вспомогательные двигатели с обслуживающими их техническими средствами;</li>
-               <li>воздушные компрессоры и воздухохранители;</li>
-               <li>двигатели спасательных шлюпок, наличие в шлюпках запаса ГСМ;</li>
-               <li>топливные системы и хранилища, средства перекачки топлива;</li>
-               <li>средства автоматизации и контрольно-измерительные приборы технических средств;</li>
-               <li>вспомогательные котлы с обслуживающими их техническими средствами, системы котельной воды;</li>
-               <li>механическая часть палубных механизмов, судовых грузовых устройств;</li>
-               <li>системы санитарная, мытьевой и питьевой воды, сточно-фановая с обслуживающими их техническими
-                  средствами;</li>
-               <li>механическая часть бытовых приборов и оборудования.</li>
+               <li>допоміжні двигуни з технічними засобами, що їх обслуговують;</li>
+               <li>повітряні компресори та повітрозапобіжники;</li>
+               <li>двигуни рятувальних шлюпок, наявність у шлюпках запасу ПММ;</li>
+               <li>паливні системи та сховища, засоби перекачування палива;</li>
+               <li>засоби автоматизації та контрольно-вимірювальні прилади технічних засобів;</li>
+               <li>допоміжні котли з технічними засобами, що їх обслуговують, системи котельної води;</li>
+               <li>механічна частина палубних механізмів, суднових вантажних пристроїв;</li>
+               <li>системи санітарна, мийної та питної води, стічно-фанова з технічними засобами, що їх обслуговують
+                  засобами;</li>
+               <li>механічна частина побутових приладів і обладнання.</li>
             </ul>
             </p>
             <p><b>Обов'язки</b></p>
