--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <nav>
             <ul class="menu">
                <span id="nameCompany">Судноплавна компанія "Мрія"</span>
-               <li><a href="index.html" style="border-bottom: 4px solid black;">Голове меню</a></li>
+               <li><a href="index.html" style="border-bottom: 4px solid black;">Головне меню</a></li>
                <li><a href="crew\crew.html">Екіпаж</a></li>
                <li><a href="ships\ships.html">Наші судна</a></li>
                <li><a href="vacancies\vacancies.html">Вакансії</a></li>
