--- a/ships/ships.html
+++ b/ships/ships.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ua">
-
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
    <title>Мрія</title>
    <link rel="stylesheet" href="../public/style.css">
 </head>
-
 <body>
    <main>
       <header>           
@@ -23,7 +21,7 @@
             </ul>
          </nav>
       </header> 
-      <div class="main-container">
+      <div class="main-container ship-container ">
          <section class="ships">
             <b>Наші судна:
                <div class="ships">
@@ -56,5 +54,4 @@
       </footer>
    </main>
 </body>
-
 </html>
