--- a/ships/bellis.html
+++ b/ships/bellis.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ua">
-
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,6 @@
    <link rel="stylesheet" href="../public/style.css">
    <link rel="stylesheet" href="../public/slider.css">
 </head>
-
 <body>
    <main>
       <header>           
@@ -24,7 +22,7 @@
             </ul>
          </nav>
       </header> 
-      <div class="main-container">
+      <div class="main-container ship-container ">
          <h1>Белліс</h1>
          <section class="photoShip">
             <div class="slideshow-container">
@@ -45,7 +43,6 @@
                <span class="dot" onclick="currentSlide(2)"></span>
             </div>
          </section>
-
          <section class="shipInfo">
             <table>
                <tr>
@@ -136,5 +133,4 @@
    <script src="../public/script.js"></script>
    <script src="../public/slider.js"></script>
 </body>
-
 </html>
