--- a/ships/ramus.html
+++ b/ships/ramus.html
@@ -22,7 +22,7 @@
             </ul>
          </nav>
       </header> 
-      <div class="main-container">
+      <div class="main-container ship-container ">
       <h1>Рамус</h1>
       <section class="photoShip">       
          <div class="slideshow-container">
@@ -43,10 +43,9 @@
             <span class="dot" onclick="currentSlide(2)"></span>
          </div> 
       </section>  
-
       <section class="shipInfo">
-         <table>
-            <tr>
+         <table class="shipInfo">
+            <tr  class="shipInfo">
                <td class="td1"><table class="t2">
                   <tr>
                      <td>Тип:</td>
