--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- Заголовок сторінки -->
-   <title>Мрія</title>
+   <title>DREAM</title>
    <!-- Підключення css файлів з стилями -->
    <link rel="stylesheet" href="public/style.css">
    <link rel="stylesheet" href="public/slider.css">
@@ -14,11 +14,13 @@
 <body>
    <main>
       <!-- Шапка сторінки (Назва компанії та Навігаційне меню) -->
-      <header>
-         <nav>
+      <header >
+         <div class="header-logo-wrapper">
+         <img class="header-logo" src="logo-site/logo-site.png" />
+         </div>
+         <nav class="header-nav">
             <ul class="menu">
-               <span id="nameCompany">Судноплавна компанія "Мрія"</span>
-               <li><a href="index.html" style="border-bottom: 4px solid black;">Головне меню</a></li>
+               <li><a href="index.html" style="border-bottom: 4px solid white;">Головне меню</a></li>
                <li><a href="crew\crew.html">Екіпаж</a></li>
                <li><a href="ships\ships.html">Наші судна</a></li>
                <li><a href="vacancies\vacancies.html">Вакансії</a></li>
