--- a/crew/crew.html
+++ b/crew/crew.html
@@ -14,7 +14,7 @@
       <header>
                 
          <div class="header-logo-wrapper">
-            <img class="header-logo" src="logo-site/logo-site.png" >\
+            <img class="header-logo" src="logo-site/logo-site.png" >
             </div>
             <nav class="header-nav">
             <ul class="menu">
