--- a/crew/chiefEngineer.html
+++ b/crew/chiefEngineer.html
@@ -13,7 +13,7 @@
    <main>
       <header>
          <div class="header-logo-wrapper">
-         <img class="header-logo" src="logo-site/logo-site.png" >\
+         <img class="header-logo" src="logo-site/logo-site.png" >
          </div>
          <nav class="header-nav">
             <ul class="menu">
